fixed #entire-calculator on css so styling is visible

--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
-.entire-calculator {
+#entire-calculator {
     display: grid;
     grid-template-rows: repeat(5, 100px);
-    max-width: 400px;
+    width: 400px;
+    height: 500px;
     border: 2px solid black;
     
 }
